--- a/complete/deploy/ansible/destroy_webapp.yml
+++ b/complete/deploy/ansible/destroy_webapp.yml
@@ -1,1 +1,23 @@
-123
+- name: Destroy previously created webapp machine
+  hosts: localhost
+  connection: local
+  vars:
+    resource_group: "{{ lookup('env', 'RES_GROUP') }}"
+    webapp_name: "{{ lookup('env', 'WEB_APP_NAME') }}"
+    location: eastus
+  tasks:
+    - name: Create a resource group
+      azure_rm_resourcegroup:
+        name: "{{ resource_group }}"
+        location: "{{ location }}"
+
+    - name: Destroy webapp
+      azure_rm_webapp:
+        resource_group: "{{ resource_group }}"
+        name: "{{ webapp_name }}"
+        plan:
+          resource_group: "{{ resource_group }}"
+          name: myappplan
+          is_linux: true
+          sku: S1
+          number_of_workers: 0
